package de.neeroxz.exercise;

/**
 * Record: Exercise
 *
 * @author NeeroxZ
 * @date 21.10.2024
 */

public record Exercise(
        int id,
        String name,
        ExerciseCategory category,
        String difficulty
) {
}

